add sieve to the global plugins

--- a/src/00-default.conf
+++ b/src/00-default.conf
@@ -4,7 +4,7 @@ login_greeting = ready
 log_path = /dev/stdout
 valid_chroot_dirs = /var/spool/mail
 first_valid_uid = 8
-mail_plugins = zlib
+mail_plugins = sieve zlib
 mail_privileged_group = mail
 mail_location = maildir:/var/spool/mail/%d/%n/Maildir:LAYOUT=fs
 userdb {
