sieve plugin only needs to be added to the delivery service, breaks services if loaded globally

--- a/src/00-default.conf
+++ b/src/00-default.conf
@@ -4,7 +4,7 @@ login_greeting = ready
 log_path = /dev/stdout
 valid_chroot_dirs = /var/spool/mail
 first_valid_uid = 8
-mail_plugins = sieve zlib
+mail_plugins = zlib
 mail_privileged_group = mail
 mail_location = maildir:/var/spool/mail/%d/%n/Maildir:LAYOUT=fs
 userdb {
@@ -14,6 +14,9 @@ userdb {
 plugin {
   sieve = /var/spool/mail/%d/%n/.dovecot.sieve
   sieve_dir = /var/spool/mail/%d/%n/sieve
+}
+protocol lmtp {
+  mail_plugins = $mail_plugins sieve
 }
 service lmtp {
   inet_listener lmtp {
