enabling use of zlib plugin for mail storage, slightly higher compression rate then the default, enabling compression for the transport through TLS as well

--- a/src/00-default.conf
+++ b/src/00-default.conf
@@ -7,6 +7,7 @@ first_valid_uid = 8
 mail_plugins = zlib
 mail_privileged_group = mail
 mail_location = maildir:/var/spool/mail/%d/%n/Maildir:LAYOUT=fs
+ssl_options = compression
 userdb {
   driver = static
   args = uid=8 gid=12 home=/var/spool/mail/%d/%n
@@ -14,6 +15,8 @@ userdb {
 plugin {
   sieve = /var/spool/mail/%d/%n/.dovecot.sieve
   sieve_dir = /var/spool/mail/%d/%n/sieve
+  zlib_save_level = 7
+  zlib_save = gz
 }
 protocol lmtp {
   mail_plugins = $mail_plugins sieve
