disable use of older TLS/SSL versions, that are deemed insecure

--- a/src/00-default.conf
+++ b/src/00-default.conf
@@ -7,6 +7,7 @@ first_valid_uid = 8
 mail_plugins = zlib
 mail_privileged_group = mail
 mail_location = maildir:/var/spool/mail/%d/%n/Maildir:LAYOUT=fs
+ssl_min_protocol = TLSv1.2
 ssl_options = compression
 userdb {
   driver = static
