update to Alpine 3.11 / dovecot 2.3.9.2 - volume change as per alpine 3.11 release notes

--- a/src/00-default.conf
+++ b/src/00-default.conf
@@ -2,20 +2,20 @@
 import_environment = TZ DOVECOT_HOSTDOMAIN
 login_greeting = ready
 log_path = /dev/stdout
-valid_chroot_dirs = /var/spool/mail
+valid_chroot_dirs = /var/mail
 first_valid_uid = 8
 mail_plugins = zlib
 mail_privileged_group = mail
-mail_location = maildir:/var/spool/mail/%d/%n/Maildir:LAYOUT=fs
+mail_location = maildir:/var/mail/%d/%n/Maildir:LAYOUT=fs
 ssl_min_protocol = TLSv1.2
 ssl_options = compression
 userdb {
   driver = static
-  args = uid=8 gid=12 home=/var/spool/mail/%d/%n
+  args = uid=8 gid=12 home=/var/mail/%d/%n
 }
 plugin {
-  sieve = /var/spool/mail/%d/%n/.dovecot.sieve
-  sieve_dir = /var/spool/mail/%d/%n/sieve
+  sieve = /var/mail/%d/%n/.dovecot.sieve
+  sieve_dir = /var/mail/%d/%n/sieve
   zlib_save_level = 7
   zlib_save = gz
 }
