update to Alpine 3.13 / dovecot 2.3.13, adding health check

--- a/src/00-default.conf
+++ b/src/00-default.conf
@@ -28,3 +28,10 @@ service lmtp {
     port = 24
   }
 }
+service health-check {
+  executable = script -p health-check.sh
+  inet_listener health-check {
+    address = 127.0.0.1
+    port = 5001
+  }
+}
